# LEXSUM

./: .flutter-plugins-dependencies  DETAILED_DEVOPS_ASSESSMENT.md  DEVOPS_7CS_ASSIGNMENT.md  DEVOPS_COMPLETE_PACKAGE.md  DEVOPS_IMPLEMENTATION.md  DEVOPS_JENKINS_IMPLEMENTATION.md  DEVOPS_SETUP_COMPLETE.md  JOIN_FEATURE_STATUS.md  Jenkinsfile  OPERATIONS.md  README.md  modal_worker.py  pubspec.yaml
.history/: .gitignore build_20260313114359  .gitignore_20260313121217  .gitignore_20260315145126  .gitignore_20260315145130  .gitignore_20260315145134
app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  queue.py  schemas.py  security.py  storage_supabase.py  worker.py
app/pipeline/: asr_whisper.py  llm.py  quiz_gen.py  summarizer.py
app/routes/: auth.py  debug.py  lectures.py  photos.py  quizzes.py  search.py  subjects.py
app/tasks/: process_lecture.py
backend/: dev.db  docker-compose.yml  modal_worker.py  pyproject.toml  reset_db.py  setup_backend.sh  start_api.sh  start_modal_worker.sh  sync_modal_secret.sh  test_db.py
backend/alembic/: env.py
backend/classroom_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py
classroom_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deployment/: README.md  classroom-backend.service  classroom-worker.service  deploy.sh
ios/Runner/: Info.plist
lib/: app.dart  main.dart
lib/models/: lecture.dart  mock_api.dart  quiz.dart  student.dart  subject.dart
monitoring/: alert_rules.yml  prometheus.yml  recording_rules.yml  setup_monitoring.sh
test/: widget_test.dart
(+37 files in other folders)
