[project]
name = "classroom-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "email-validator>=2.1.0",

  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "alembic>=1.13.1",

  "python-multipart>=0.0.9",

  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",

  "celery>=5.4.0",
  "redis>=5.0.4",
  "rq>=1.16.2",

  "httpx>=0.27.0",

  # Worker ML deps (ASR + summarization)
  "transformers>=4.45.0",
  "torch>=2.2.0",
  "accelerate>=0.33.0",
  "sentencepiece>=0.2.0",
  "faster-whisper>=1.0.3",

  # DevOps dependencies (for CI/CD pipeline)
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "safety>=2.3.0",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["app*"]
exclude = ["backend*", "alembic*", "venv*", "tests*"]
